[project]
name = "tracking-everything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
]
